refactor: ArgumentMarshaler 클래스 추가